style/common.css
/* ... */
#button-note-cancel span {
    left: -0.5rem;
    background: transparent url(../images/iconaction_cancel_30x30.png) 50% 50% no-repeat;
    background-size: 3rem 3rem;
}
.readonly #button-note-cancel span {
    background: transparent url(../images/back.png) 50% 50% no-repeat;
    background-size: 3rem 3rem;
}
    
.card .footer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 4rem;
    line-height: 4rem;
    z-index: 50;
    color: #fff;
    text-align: center;
    background: rgba(0, 0, 0, .8);
}
    .card .footer b {
        position: absolute;
        top: 0;
        bottom: 0;
        width: 4rem;
        font-size: 0;
        text-indent: -10rem;
        cursor: pointer;
    }
    .card .footer .bottomleft {
        left: 0.5rem;
    }
    .card .footer .bottomright {
        right: 1rem;
    }
    .card .footer select {
        position: absolute;
        bottom: 0;
        right: 0;
        width: 5rem;
        height: 4rem;
        opacity: 0;
    }
    
.card > .content {
    position: absolute;
    top: 4.9rem;
    bottom: 0;
    left: 0;
    right: 0;
    padding-bottom: 4rem;
    z-index: 30;
    overflow-y: auto;
}

.notebook-notes {
    list-style-type: none;
    min-height: 100%;
    padding-bottom: 4rem;
}
    .notebook-notes li {
        position: relative;
        font-size: 1.3rem;
        min-height: 2.1rem;
        overflow: hidden;
        padding: 1.2rem 4rem 1.2rem 2rem;
        border-bottom: 0.1rem solid #dbd9d9;
        cursor: pointer;
    }
        .notebook-notes li .title {
            font-size: 1.8rem;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
        }
        .notebook-notes li .time {
            font-size: 1.3rem;
            color: #666;
        }
        .notebook-notes li .image {
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            width: 3rem;
            background-size: cover;
            background-position: 0 50%;
            background-repeat: no-repeat;
        }
        .notebook-notes li b {
            font-weight: bold;
        }

#note {

}
#note.card > .content {
    top: 8.5rem;
}
#note.card > .footer {
    display: none;
}
    #note #note-content, #note .demo-content {
        background: transparent;
        border: none;
        width: 100%;
        min-height: 25rem;
        padding: 2rem;
        line-height: 130%;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
    }
    #note .demo-content {
        position: absolute;
        top: 0;
        left: 0;
        z-index: 0;
        pointer-events: none;
        opacity: 0;
    }
    #note.show-empty #note-content {
    }
    #note.has-images #note-content {
    }
    #note #note-resources {
        list-style-type: none;
        color: #2c2c2c;
        font-size: 1.3rem;
        margin: 0 1.5rem 1.5rem 1.5rem;
    }
        #note #note-resources li {
            position: relative;
            margin-top: 1.5rem;
        }
        
        #note #note-resources .image {
            height: 6rem;
            padding-left: 9rem;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
        }
            #note #note-resources .image:before {
                content: "";
                background: transparent url(../images/attachment.png) 50% 50% no-repeat;
                background-size: 1rem 2.2rem;
                position: absolute;
                top: 0;
                left: 7rem;
                width: 1rem;
                height: 2.2rem;
            }
            #note #note-resources .image span {
                position: absolute;
                top: 0;
                left: 0;
                width: 6rem;
                height: 6rem;
                background-position: 50% 50%;
                background-repeat: no-repeat;
                background-size: cover;
            }
        
    #note #button-note-save {
        opacity: 0;
        pointer-events: none;
        -moz-transition: opacity 150ms linear;
        transition: opacity 150ms linear;
    }
    #note #button-note-save.visible {
        opacity: 1;
        pointer-events: inherit;
    }
    
#note.card.readonly > .content {
    top: 4.9rem;
}
    #note.readonly #note-edit-actions {
        display: none;
    }
    #note.readonly #button-note-save {
        display: none;
    }
    #note.readonly #note-content {
        pointer-events: none;
    }
    #note.readonly > .footer {
        display: block;
    }
    
#note-edit-actions {
    position: absolute;
    top: 4.9rem;
    left: 0;
    right: 0;
    list-style-type: none;
    background: #c9c7c7;
    border-bottom: 0.1rem solid #c9c7c7;
}
    #note-edit-actions:after {
        display: list-item;
        float: none;
        clear: both;
        height: 0;
        width: 0;
    }
    #note-edit-actions li {
        position: relative;
        float: left;
        width: 20%;
        height: 3.6rem;
        line-height: 3.6rem;
        font-size: 0;
        text-indent: -10rem;
        cursor: pointer;
        border-right: 0.1rem solid #a6a5a5;
        border-left: 0.1rem solid #d9d8d8;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
    }
    #note-edit-actions li:first-child {
        background: #fff;
        border-left: none;
    }
    #note-edit-actions li:last-child {
        border-right: none;
    }
    
    
#image-fullscreen {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: #000;
    z-index: 600;
    display: none;
}
#image-fullscreen.visible {
    display: block;
}
    #image-fullscreen .image {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        z-index: 10;
        background-position: 50% 50%;
        background-repeat: no-repeat;
        background-size: contain;
    }
/* ... */

